--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
     background-color: #000000;
     color: #FFFFFF;
     margin-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 h1 {
@@ -80,12 +80,12 @@ div {
     border-left-width: 5px;
 }
 
-.yellow p, .yellow h2 {
+.yellow p {
     color: #707070;
 }
 
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-width: 0px;
@@ -106,5 +106,6 @@ footer p{
     text-align: right;
     padding-top: 15px;
     padding-right: 15px;
+    padding-left: 0px;
     padding-bottom: 15px;
 }
