--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ div {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px;
+    border-width: 0;
     border-bottom-width: 2px;
     border-left-width: 5px;
 }
@@ -62,7 +62,7 @@ div {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-width: 0px;
+    border-width: 0;
     border-right-width: 5px;
     border-top-width: 2px;
 }
@@ -75,7 +75,7 @@ div {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px;
+    border-width: 0;
     border-bottom-width: 2px;
     border-left-width: 5px;
 }
@@ -88,7 +88,7 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-width: 0px;
+    border-width: 0;
     border-right-width: 5px;
     border-top-width: 2px;
 }
@@ -106,6 +106,6 @@ footer p{
     text-align: right;
     padding-top: 15px;
     padding-right: 15px;
-    padding-left: 0px;
+    padding-left: 0;
     padding-bottom: 15px;
 }
