--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,246 @@
-body {
-    font-family: Arial, Verdana;
-    background-color: #000000;
-    color: #FFFFFF;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+html{
+  scroll-behavior: smooth;
 }
 
-h1 {
-    font-size: 42px;
-    text-align: center;
-    padding: 15px;
+body{
+  background-color: #737373;
+  font-size: 18px;
+  line-height: 1.15;
+  margin: 0;
+  padding: 0;
 }
 
-h2 {
-    font-size: 30px;
-    color: #0D0D0D;
+
+.overview{
+  background-attachment: fixed; /* Parallax effect */     
+  background-position: center;  /* Parallax effect */
+  background-repeat: no-repeat; /* Parallax effect */
+  background-size: cover;       /* Parallax effect */
+  color: white;
+  height: 400px;                /* Parallax effect */
 }
 
-p {
-    font-size: 24px;
-    padding-top: 10px;
-    padding-left: 10px;
+
+.overview p{
+  color: white;
+  font-size: 24px;
+  padding: 0 100px;
+  text-align: center;
 }
 
-img {
-    width: 250px;
-    border: dashed #FFFFFF;
-    border-width: 10px;
+h1{
+  font-size: 50px;
+  line-height: 1;
+  padding: 50px 0;
+  text-align: center;
+}
 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+h2{
+  font-size: 32px;
+  line-height: 1.5;
+}
+
+nav li{
+  display: inline;
+  padding-right: 20px;
+
+}
+
+nav a{
+  color: black;
+  font-weight: bold;
+  text-decoration: none; 
+}
+
+
+.skip a{
+  background: white;
+  left: 0;
+  padding: 6px;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 1;
+}
+
+
+nav{
+  background-color: #ddd;
+  padding: 25px 0; 
+  text-align: left;
+}
+
+footer{
+  background-color: black;
+  color: white;
+  padding-top: 30px;
+  text-align: center;
+}
+
+
+.text-block{
+  background-color: rgba(255, 255, 255, .8);
+  border: 10px solid black;
+  padding: 30px;
+}
+
+
+@media screen and (prefers-reduced-motion: reduce){
+  html{
+      scroll-behavior: auto; /* Removes scroll animation */
+  }
+
+  .skip a{
+    -webkit-transition: none; /* sets to default setting */
+    transition: none;        /* sets to default setting */
+   }
+
+  /*Turn off parallax*/
+  header{
+    background-attachment: initial;
+  }
+}
+
+
+
+/*Your Code Here*/
+/* PLEASE DO NOT REMOVE MY COMMENTS.  THEY HELP US HELP YOU DEBUG. */
+
+/* Step 1: Write selector/rule property to add an underline when
+links in the navigation are in the hover or focus state.*/
+
+nav a:hover, nav a:focus {
+  text-decoration: underline;
+}
+
+
+/* Step 2a: Write selector/rule property to position the default position for the skip class element*/
+
+.skip{
+  background-color: red;
+}
+
+.skip a{
+  /* visibility: hidden; */
+  position: absolute;
+  top: -40px;
+  margin: 0;
+}
+
+
+
+/* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
+
+.skip a:focus{
+  /* visibility: visible; */
+  
+  top: 20px;
+}
+
+/* Step 3: Write selector/rule property to style all elements when in focus*/
+
+:focus {
+  border: solid 2px;
+}
+
+/* Step 4: Write selector/rule property to style the container */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+  row-gap: 15px;
+}
+
+
+
+
+
+
+/* Step 5: Write selector/rule property to add the background image to the 
+first div in the grid  and place it in the grid. */
+
+.container div:first-child{
+  
+  grid-column: 1 /-1;
+  background-image: url(header.jpg);
+  background-repeat: no-repeat;
+
+}
+
+
+/* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next
+ four rows in the grid. */
+
+      /*This will be a lot of rules.... but be strategic and combine seletors*/
+
+.about, .method, .clients, .contact {
+  
+  grid-column: 2 / span 1;
+
+}
+
+.about, .about-image {
+  
+  grid-row-start: 2;
+}
+
+.method, .method-image{
+  grid-row-start: 3;
+}
+
+.clients, .clients-image{
+  grid-row-start: 4;
+}
+
+.contact, .contact-image{
+  grid-row-start: 5;
+}
+
+.about-image, .method-image, .clients-image, .contact-image{
+  
+  grid-column: 1/-1;
+  max-height: 600px;
+  overflow: hidden;
+}
+
+ /* Step 8: Write the selector/rule property to style the .text-block class. */
+
+.text-block {
+  
+  align-self: center;
+  text-align: center;
+ 
+  
+}
+
+/* Add your media query here */
+
+@media only screen and (min-width: 800px){
+
+  /* Step 9: Write the selector/rule property to style the nav element */
+  nav {
+    text-align: right;
+    padding: 30px 0 30px 0;
+  }
+  
+ 
+  /* Step 10: Write the selector/rule property to update the .container class */
+  .container{
+    grid-template-columns: 50px auto 500px auto 50px;
+  }
+
+  /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
+  .about, .clients, .method-image, .contact-image{
+    grid-column: 3/span 2;
+  }
+
+  .method, .contact, .about-image, .clients-image{
+    grid-column: 2/span 2;
+  }
+
+ /* Step 13:Write the selector/rule property to update the .text-block class */
+.text-block{
     
-}
-
-div {
-    height: auto;
-    min-height: 125px;
-    padding: 20px;
-    border: solid #FFFFFF;
-    border-width: 3px;
-}
-
-.introduction {
-    border-radius: 15px;
-    margin-top: 15px;
-    line-height: 2;
-}
-
-.red {
-    background-color: #FF0000;
-    text-align: right;
-    margin-left: 50px;
-    border-width: 0;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
-}
-
-.blue {
-    background-color: #0000FF;
-    text-align: left;
-    margin-right: 50px;
-    border-width: 0;
-    border-right-width: 5px;
-    border-top-width: 2px;
-}
-
-.blue p, .blue h2 {
-    color: #C4C4C4;
-}
-
-.yellow {
-    background-color: #FFFF00;
-    text-align: right;
-    margin-left: 50px;
-    border-width: 0;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
-}
-
-.yellow p {
-    color: #707070;
-}
-
-.green {
-    background-color: #008500;
-    text-align: left;
-    margin-right: 50px;
-    border-width: 0;
-    border-right-width: 5px;
-    border-top-width: 2px;
-}
-
-footer {
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
-    /*Gradient from cssgradient.io*/
-    border: solid #FFFFFF;
-    border-width: 5px;
-}
-
-footer p{
-    font-size: 20px;
-    text-align: right;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-left: 0;
-    padding-bottom: 15px;
+  max-height: 250px;
+  overflow: scroll;
+  }
 }
